# TouchTool

./: README.md  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  logging.h  native-lib.cpp  native-lib.h
docs/: 404.html  index.html  sitemap.xml
docs/assets/css/: styles.4a572f82.css
docs/assets/js/: 141fb8db.e53784fb.js  141fb8db.e863a8fc.js  17896441.3d004bf7.js  199e6ee9.3f2b5fab.js  199e6ee9.7b87e86b.js  2232c952.bf180a75.js  237.480fed3b.js  260ade76.01650334.js  260ade76.98dc1afb.js  2fadd5bc.8cb54a75.js  2fadd5bc.b228dbb9.js  3041df73.8616a23a.js  3041df73.d2aefc56.js  38ab5e89.31024b6b.js  38ab5e89.97a092df.js  5e95c892.2bd30898.js  5f9e5775.403e7f14.js  5f9e5775.5903b0a9.js  73410202.4f548860.js  73410202.c764cb00.js  75b93e3b.5b2036e2.js  75b93e3b.d5346ae1.js  8fa14848.0a0a84ae.js  8fa14848.c32f3b25.js  98f8a71f.6c6c63cd.js  98f8a71f.e65f4390.js  98f8a71f.f38de516.js  a7456010.f92d4b82.js  a7bd4aaa.8dee1712.js  a94703ab.0cffb16b.js  aba21aa0.711e1120.js  b5cdbc6b.79878174.js  b5cdbc6b.812bcd0b.js  bf060428.3c61e997.js  bf060428.c47c267b.js  bff8da8a.c2e2ef5f.js  bff8da8a.f7a9ed43.js  c4f5d8e4.d94d0f78.js  d589d3a7.25253cae.js  e4c82537.3458c929.js  (+9 more)
docs/docs/actions/app/: index.html
docs/docs/actions/area/: index.html
docs/docs/actions/bool/: index.html
docs/docs/actions/click/: index.html
docs/docs/actions/color/: index.html
docs/docs/getting-started/: index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+303 files in other folders)
